style register page, correct css overflowing styles from roomCards

--- a/frontend/src/components/rooms/RoomsItem.scss
+++ b/frontend/src/components/rooms/RoomsItem.scss
@@ -1,3 +1,12 @@
 .something {
   display: flex;
 }
+.room-details-button{
+  float: right;
+}
+.text-center{
+  width: 45vw;
+}
+.room-card-text{
+  padding: 20px;
+}
